<resources>
    <string name="app_name">JogoDaVelha</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="vezJogador">Player time:</string>
    <string name="Vazio">" "</string>
    <string name="strJogoDaVelha">Jogo da Velha</string>
    <string name="str1Jogador">1 Player</string>
    <string name="str2Jogadores">2 Players</string>
    <string name="direitos">© All rights reserved for Igor Ulian :)</string>
    <string name="strIniciar">Start</string>
    <string name="jogador1">Player 1</string>
    <string name="jogador2">Player 2</string>
    <string name="msgErro">Enter the names</string>
    <string name="Jogador">Player</string>
    <string name="strSlotOcupado">This slot is already busy!</string>
    <string name="strVezDoBotAguarde">BOT time, wait your time</string>
    <string name="strJogoEmpatado">Game tied</string>
    <string name="strGanhou">Won</string>
    <string name="strVoce">You</string>
    <string name="strSuaVez">Your time</string>
    <string name="strVezDoBot">Bot time</string>
    <string name="strOJogador"></string>
    <string name="strXxX">00 x 00</string>
</resources>
